# irail-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  update-stations.yml
scripts/: update_stations.py
src/irail_mcp/: __init__.py  irail_client.py  models.py  server.py  station_search.py
src/irail_mcp/data/: stations.json
tests/: test_irail_client.py  test_server.py  test_station_search.py
