[project]
name = "irail-mcp"
version = "0.1.0"
description = "iRail API Model Context Protocol Server for Belgian train travel information"
authors = [{name = "iRail MCP Contributors"}]
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/irail_mcp"]
