[project]
name = "irail-mcp"
version = "0.2.0"
description = "MCP server for Belgian railway data via the iRail API"
authors = [{name = "Hans F"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "irail", "belgium", "railway", "trains", "nmbs", "sncb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
irail-mcp = "irail_mcp.server:cli"

[project.urls]
Homepage = "https://github.com/HansF/irail-mcp"
Repository = "https://github.com/HansF/irail-mcp"
Issues = "https://github.com/HansF/irail-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/irail_mcp"]
